--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="zn_CN">
 <head>
  <meta charset="UTF-8">
- <!--<meta http-equiv="refresh" content="5; url=https://hainiu.fun">-->
- <title>163加速器地址发布页</title>
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
- <link rel="stylesheet" href="https://fonts.loli.net/css?family=Karla:400%7CPoppins:400,400i,500,700">
+ <!--<meta http-equiv="refresh" content="5; url=https://126game.cc">-->
+ <title>163加速器地址</title>
+<!-- <link rel="shortcut icon" type="image/x-icon" href="http://103.118.41.189:1091/favicon.ico">-->
  <style>
   body{
    background-color: #319795;
@@ -59,18 +58,22 @@
  <section class="main">
      <div class="container">
       <div class="content">
-          <h2>163加速器 <br>地址发布页</h2>
-          <p>顶级IEPL专线 高速稳定的网络体验！</p>
-          <p><a style="font-size:70px;color:#ffffff;text-decoration:none;" href="https://126game.us" target="_blank">126game.us</a></p>
-          <a class="about" id="link"  href="#">最新地址</a>
+          <h2>163加速器 </h2>
+          <span style="font-size:36px;">地址发布页</span>
+          <!--<p style="font-size:26px;">顶级IEPL专线 高速稳定的网络体验</p>-->
+          <p><a style="font-size:50px;color:#ffffff;text-decoration:none;" href="https://126game.us" target="_blank">最新地址 126game.us</a></p>
+          <p><a style="font-size:26px;color:#ffffff;text-decoration:none;" href="http://103.118.41.189:10163" target="_blank">如无法打开上面地址请点击IP地址访问 <br/> 103.118.41.189:10163</a></p>
+          <p>（福建、河南、江苏地区建议使用IP地址访问）</p>
+          <!--<p><a style="font-size:26px;color:#ffffff;text-decoration:none;" href="http://103.118.41.189:10163" target="_blank">如无法打开上面地址请点击IP地址访问 <br/> 103.118.41.189:10163</a></p>-->
+          <!--<a class="about" id="link"  href="#">最新地址</a>-->
       </div>
      </div>
  </section>
 <script language="javascript">
- var a =  document.getElementById('link');
+ /*var a =  document.getElementById('link');
  a.onclick = function(){
-  window.location.href="https://haima.us";
-    }
+  window.location.href="https://126game.us";
+    }*/
 </script>
 </body>
 </html>
