--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <!--<p style="font-size:26px;">顶级IEPL专线 高速稳定的网络体验</p>-->
           <p><a style="font-size:50px;color:#ffffff;text-decoration:none;" href="https://126game.us" target="_blank">最新地址 126game.us</a></p>
           <p><a style="font-size:26px;color:#ffffff;text-decoration:none;" href="http://103.118.41.189:10163" target="_blank">如无法打开上面地址请点击IP地址访问 <br/> 103.118.41.189:10163</a></p>
+          <p><a style="font-size:26px;color:#ffffff;text-decoration:none;" href="http://8.218.158.153:10163" target="_blank">备用IP  8.218.158.153:10163</a></p>
           <p>（福建、河南、江苏地区建议使用IP地址访问）</p>
           <!--<p><a style="font-size:26px;color:#ffffff;text-decoration:none;" href="http://103.118.41.189:10163" target="_blank">如无法打开上面地址请点击IP地址访问 <br/> 103.118.41.189:10163</a></p>-->
           <!--<a class="about" id="link"  href="#">最新地址</a>-->
